--- a/core/app/views/ProcureUnits/dataPanel.html
+++ b/core/app/views/ProcureUnits/dataPanel.html
@@ -9,16 +9,7 @@
   <div class="col-sm-4">
     <div class="box">
       <div class="box-body">
-        <div id="a_units" data-method="ajaxUnit" class="span6" style="height:350px"></div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="col-sm-4">
-    <div class="box">
-      <div class="box-body">
-        <div id="a_turn" data-method="ajaxSellingTurn" style="min-height:350px;" class="span6"></div>
+        <div id="a_units" data-method="ajaxUnit" style="height:350px"></div>
       </div>
     </div>
   </div>
@@ -26,7 +17,15 @@
   <div class="col-sm-4">
     <div class="box">
       <div class="box-body">
-        <div id="payment_div" data-method="ajaxUnit" class="span6" style="height:350px"></div>
+        <div id="a_turn" data-method="ajaxSellingTurn" style="min-height:350px;"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="box">
+      <div class="box-body">
+        <div id="payment_div" data-method="ajaxUnit" style="height:350px"></div>
       </div>
     </div>
   </div>
