--- a/core/app/views/Roles/show.html
+++ b/core/app/views/Roles/show.html
@@ -171,11 +171,13 @@
             <tr>
               <th>username</th>
               <th>email</th>
+              <th>closed</th>
             </tr>
               #{list items:role.users, as:'usr'}
                 <tr>
                   <td>${usr.username}</td>
                   <td>${usr.email}</td>
+                  <td>#{yesOrNo f:!usr.closed, id:usr.id/}</td>
                 </tr>
               #{/list}
           </table>
