--- a/core/app/views/Sellings/_amazon.html
+++ b/core/app/views/Sellings/_amazon.html
@@ -19,7 +19,7 @@
       <button class="btn btn-info" id="amz-update" data-url="@{Sellings.update()}" title="直接更新到数据库"
               placement='bottom' data-toggle="tooltip">Update
       </button>
-      <button class="btn btn-success" id="amz-sync" title="从 Amazon 同步回来更新到数据库"
+      <button class="btn btn-success" id="amz-sync" title="从 Amazon 同步回来更新到数据库" data-sid="${s.sellingId}"
               placement='bottom' data-toggle="tooltip">Sync
       </button>
       <button class="btn btn-warning" id="amz-part-update" data-url="@{Sellings.partialUpdate()}"
