--- a/core/app/views/_css_header_v3.html
+++ b/core/app/views/_css_header_v3.html
@@ -1,15 +1,12 @@
 #{stylesheet 'bootstrap3/bootstrap.css'/}
+#{stylesheet 'bootstrap3/bootstrap-datepicker3.css'/}
 #{stylesheet 'bootstrap3/font-awesome.css'/}
 #{stylesheet 'bootstrap3/ionicons.css'/}
-
 #{stylesheet 'bootstrap3/selectize.bootstrap3.css'/}
 #{stylesheet 'jquery.loadmask.css'/}
-#{stylesheet 'bootstrap3/datepicker3.css'/}
-
 #{stylesheet 'bootstrap3/AdminLTE.css'/}
 #{stylesheet 'bootstrap3/skins/_all-skins.css'/}
 #{stylesheet 'bootstrap3/bootstrap-switch.min.css'/}
-
 #{stylesheet 'bootstrap3/flag-icon.css'/}
 
 
