--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -128,7 +128,7 @@
                    data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
             </td>
           </tr>
-          
+
 
           <tr>
             <td>marketRecordWatchTrigger</td>
@@ -140,13 +140,20 @@
             </td>
           </tr>
 
+          <tr>
+            <td>amazonOrderFinanceSyncByGroup</td>
+            <td>通过group获取salefee</td>
+            <td> 0点8点16点 30分</td>
+            <td></td>
+            <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="amazonOrderFinanceSyncByGroup"
+                   data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+            </td>
+          </tr>
 
         </table>
       </div>
 
-      <div class="box-footer">
 
-      </div>
     </div>
 
   #{records_v3 records:logs/}
