--- a/core/app/views/Users/home.html
+++ b/core/app/views/Users/home.html
@@ -10,7 +10,7 @@
       <div class="box-header with-border">
         <h3 class="box-title">用户信息</h3>
       </div>
-      <form method="post" action="@{Users.updates()}" class="form-horizontal">
+      <form method="post" action="@{Users.updates()}" class="form-horizontal" autocomplete="off">
         <div class="box-body">
           <div class="row-fluid">
             <div class="col-lg-6">
@@ -56,7 +56,8 @@
             <div class="col-lg-6">
               <div class="form-group">
                 <label class="col-sm-2 control-label">阿里旺旺</label>
-                <input style="width:250px;" class="form-control" name="wuser.wangwang" value="${user.wangwang}">
+                <input style="width:250px;" class="form-control" name="wuser.wangwang" value="${user.wangwang}"
+                       autocomplete="off">
               </div>
             </div>
           </div>
@@ -65,7 +66,8 @@
             <div class="col-lg-6">
               <div class="form-group">
                 <label class="col-sm-2 control-label">密码</label>
-                <input style="width:250px;" class="form-control" type="password" name="wuser.password" placeHolder="更新需要填写正确的密码">
+                <input style="width:250px;" class="form-control" type="password" name="wuser.password"
+                       placeHolder="更新需要填写正确的密码" autocomplete="off">
               </div>
             </div>
 
