--- a/core/app/views/Inbounds/edit.html
+++ b/core/app/views/Inbounds/edit.html
@@ -67,6 +67,16 @@
             <input role="date" name="inbound.receiveDate" value="${inbound.receiveDate.date()}" required
                    autocomplete="off" class="form-control">
           </div>
+          <label for="pro_category" class="col-sm-2 control-label">交货方式<span style="color:red">*</span></label>
+          <div class="col-sm-2">
+            <select class="form-control" name="inbound.deliveryMethod">
+              <option value="">请选择</option>
+                #{list items:models.whouse.Inbound.DM.values(), as:'d'}
+                  <option value="${d}" ${inbound.deliveryMethod==d? 'selected':''}>${d.label()}</option>
+                #{/list}
+            </select>
+          </div>
+
         </div>
 
         <div class="form-group">
