*erp增加运营月度报表调度

--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -122,9 +122,19 @@
           <tr>
             <td>financeEndAndMonthJob</td>
             <td>自动下载发送 财务所需报表邮件</td>
-            <td>每月最后一天 18点</td>
+            <td>每月1号 9点</td>
             <td></td>
             <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="financeEndAndMonthJob"
+                   data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td>operateReportJob</td>
+            <td>自动下载发送 运营所需报表邮件</td>
+            <td>每月2号 10点 </td>
+            <td></td>
+            <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="operateReportJob"
                    data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
             </td>
           </tr>
