--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -258,7 +258,7 @@
                 #{/power.ck}
                 #{power.ck "jobs.index"}
                   <li><a href="@{Jobs.index()}">任务管理</a></li>
-                  <li><a href="@{Jrockends.index()}">Jrockend任务管理</a></li>
+                  <li><a href="@{Jrockends.index()}">Jrockend</a></li>
                 #{/power.ck}
                 #{power.ck "accounts.index"}
                   <li><a href="@{Accounts.index()}">账户管理</a></li>
