*  销量分析页面调整

--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -36,7 +36,7 @@
     <button class="btn btn-xs" data-market='amazon.it'>意大利</button>
     <button class="btn btn-xs" data-market='amazon.jp'>日本</button>
     <button class="btn btn-xs" data-market='amazon.ca'>加拿大</button>
-    <button class="btn " data-market=''>汇总</button>
+    <button class="btn btn-xs" data-market=''>汇总</button>
   #{power.ck "elcuk.index"}
     <a class="btn btn-xs btn-danger" name="refreshCache" key="unit">清除缓存</a>
   #{/power.ck}
