修改出库单创建时区分项目名称

--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -52,7 +52,7 @@
         <td>
           <select name="outbound.type">
               #{list items:models.whouse.StockRecord.C, as:'t'}
-                  #{if proUnit.projectName == 'EASYACC'}
+                  #{if proUnit.projectName != 'MengTop'}
                       #{if t.name().equals("Normal")}
                         <option value="${t.name()}">${t.label()}</option>
                       #{/if}
