--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -25,6 +25,12 @@
                 <input style="width:100px;" class="form-control" role="date" name="to" value="${to.date()}">
               </div>
             </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">分割天数:</div>
+                <input style="width:100px;" class="form-control" name="splitDate" value="${splitDate}">
+              </div>
+            </div>
             <select name="market" style="width: 120px;" class="form-control">
               <option value="">Market</option>
             #{list items:models.market.M.values(), as:'d'}
@@ -132,7 +138,7 @@
           <tr>
             <td>operateReportJob</td>
             <td>自动下载发送 运营所需报表邮件</td>
-            <td>每月2号 10点 </td>
+            <td>每月2号 10点</td>
             <td></td>
             <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="operateReportJob"
                    data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
