--- a/core/app/views/Inbounds/blank.html
+++ b/core/app/views/Inbounds/blank.html
@@ -1,132 +1,140 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title:'采购收货入库单' /}
 #{set 'moreScripts'}
     #{script 'inbounds/blank.js'/}
 #{/set}
-<style>
-  .table td{
-    vertical-align:middle;
-  }
-</style>
 
 #{errorMsgs /}
 #{flash_alert/}
 
-#{form @Inbounds.create(), method:'POST', id: 'new_inbound'}
-    #{info_row title: it.label() + '单'/}
-<div class="row-fluid">
-  <div class="span12">
-    <table class="table table-bordered">
-      <tr>
-        <th>收货入库单ID</th>
-        <td>
-          <input type="text" name="inbound.id" disabled>
-          <input type="hidden" name="isTail" value="false">
-        </td>
-        <th>状态</th>
-        <td style="width: 40%;"><input type="text" name="inbound.status" value="Create" readonly></td>
-      </tr>
-      <tr>
-        <th>出货单</th>
-        <td><input type="text" name="inbound.plan.id" value="${planId}" readonly></td>
-        <th>供应商</th>
-        <td>
-          <input type="text" value="${proUnit.cooperator.name}" readonly/>
-          <input type="hidden" name="inbound.cooperator.id" value="${proUnit.cooperator.id}" id="cooperId">
-        </td>
-      </tr>
-      <tr>
-        <th>收货入库单名称</th>
-        <td><input type="text" class="span8" name="inbound.name"
-                   value="${proUnit.cooperator.name}_${it.label()}_${new Date().date()}_${username}"></td>
-        <th>收货类型</th>
-        <td>
-          <input type="text" value="${it.label()}" readonly>
-          <input type="hidden" name="inbound.type" value="${it.name()}">
-        </td>
-      </tr>
-      <tr>
-        <th>收货日期<span style="color:red">*</span></th>
-        <td><input type="date" name="inbound.receiveDate" required></td>
-        <th></th>
-        <td></td>
-      </tr>
-      <tr>
-        <th>创建日期</th>
-        <td><input type="date" value="${new Date().date()}" readonly="true"></td>
-        <th>创建人</th>
-        <td><input type="text" value="" readonly="true"></td>
-      </tr>
-      <tr>
-        <th>备注</th>
-        <td colspan="4">
-          <textarea name="inbound.memo" rows="4" class="input-block-level"></textarea>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="4">
+<div class="row">
+  <div class="col-md-12">
+    <form action="@{Inbounds.create()}" method="post" id="new_inbound" class="form-horizontal">
+      <div class="box box-primary box-solid">
+        <div class="box-header"><h3 class="box-title">${it.label()}单</h3></div>
+        <div class="box-body">
+          <div class="form-group">
+            <label for="pro_category" class="col-sm-1 control-label">收货入库单ID</label>
+            <div class="col-sm-2">
+              <input type="text" name="inbound.id" disabled class="form-control">
+              <input type="hidden" name="isTail" value="false">
+            </div>
+            <label for="pro_family" class="col-sm-2 control-label">状态</label>
+            <div class="col-sm-2">
+              <input type="text" name="inbound.status" value="Create" readonly class="form-control">
+            </div>
+            <label for="pro_category" class="col-sm-2 control-label">出货单</label>
+            <div class="col-sm-2">
+              <input type="text" name="inbound.plan.id" value="${planId}" class="form-control" readonly>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="cooperId" class="col-sm-1 control-label">收货入库单名称</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" name="inbound.name"
+                     value="${proUnit.cooperator.name}_${it.label()}_${new Date().date()}_${username}"></td>
+            </div>
+            <label for="cooperId" class="col-sm-2 control-label">供应商</label>
+            <div class="col-sm-2">
+              <input type="text" value="${proUnit.cooperator.name}" readonly class="form-control"/>
+              <input type="hidden" name="inbound.cooperator.id" value="${proUnit.cooperator.id}" id="cooperId">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-1 control-label">收货日期<span style="color:red">*</span></label>
+            <div class="col-sm-2">
+              <input role="date" name="inbound.receiveDate" required class="form-control">
+            </div>
+            <label class="col-sm-2 control-label">交货方式<span style="color:red">*</span></label>
+            <div class="col-sm-2">
+              <select class="form-control" name="inbound.deliveryMethod">
+                <option value="">请选择</option>
+              #{list items:models.whouse.Inbound.DM.values(), as:'d'}
+                <option value="${d}">${d.label()}</option>
+              #{/list}
+              </select>
+            </div>
+            <label for="cooperId" class="col-sm-2 control-label">收货类型</label>
+            <div class="col-sm-2">
+              <input type="text" value="${it.label()}" class="form-control" readonly/>
+              <input type="hidden" name="inbound.type" value="${it.name()}"/>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-1 control-lable">备注</label>
+            <div class="col-sm-11">
+              <textarea name="inbound.memo" rows="4" class="form-control"></textarea>
+            </div>
+          </div>
+        </div>
+
+        <div class="box-footer">
           <input type="hidden" name="record.origin" value="">
           <input type="hidden" name="record.state" value="">
           <button class="btn btn-primary" name="create_record">创建</button>
           <a href="@{Inbounds.index()}" class="btn btn-success">取消</a>
-        </td>
-      </tr>
-    </table>
+        </div>
+      </div>
+
+      <div class="box box-success box-solid">
+        <div class="box-header"><h3 class="box-title">已添加进入【${it.label()}单】的【采购单元】</h3></div>
+        <div class="box-body">
+          <table class="table table-condensed table-bordered" id="data_table">
+            <tr>
+              <th><input type="checkbox"></th>
+              <th>采购计划ID</th>
+              <th>采购单</th>
+              <th>Selling</th>
+              <th>SKU</th>
+              <th>产品名称</th>
+              <th>预计交货时间</th>
+              <th>预计运输时间</th>
+              <th>计划交货数量</th>
+              <th>FBA-ShipmentId</th>
+              <th>去往仓库</th>
+              <th>运输方式</th>
+              <th>项目名称</th>
+              <th>阶段</th>
+            </tr>
+          #{list items:units, as:'unit'}
+              #{set planQty:it.name()=='Machining'? unit.availableQty : unit.attrs.planQty/}
+            <tr class="text-center" id="tr_${unit.id}">
+              <td>
+                <input type="checkbox" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
+                <input type="hidden" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
+              </td>
+              <td>${unit.id}</td>
+              <td>${unit.deliveryment.id}</td>
+              <td>${unit.selling?.sellingId}</td>
+              <td>${unit.product.sku}</td>
+              <td>${unit.product.abbreviation}</td>
+              <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+              <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
+              <td>${planQty}</td>
+              <td>${unit.fba?.shipmentId}</td>
+              <td>${unit.whouse?.name()}</td>
+              <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
+              <td>${unit.projectName}</td>
+              <td style="background-color:${unit.stage?.rgb()}">${unit.stage?.label()}</td>
+            </tr>
+          #{/list}
+          </table>
+        </div>
+        <div class="box-footer form-inline">
+          <input type="button" class="btn btn-danger" id="deleteBtn" value="解除"/>
+          <input type="text" name="msg" value="" placeholder="采购计划ID" id="procureId" class="form-control">
+          <input type="button" class="btn btn-warning" rel="tooltip" id="quickAdd" title="输入采购ID，可以快速添加采购计划" value="快速添加">
+
+        </div>
+      </div>
+
+    </form>
   </div>
 </div>
-    #{info_row title:'已添加进入【'+it.label()+'单】的【采购单元】'/}
-<div class="row-fluid">
-  <div class="span12">
-    <table class="table table-condensed table-bordered" id="data_table">
-      <tr>
-        <th><input type="checkbox"></th>
-        <th>采购计划ID</th>
-        <th>采购单</th>
-        <th>Selling</th>
-        <th>SKU</th>
-        <th>产品名称</th>
-        <th>预计交货时间</th>
-        <th>预计运输时间</th>
-        <th>计划交货数量</th>
-        <th>FBA-ShipmentId</th>
-        <th>去往仓库</th>
-        <th>运输方式</th>
-        <th>项目名称</th>
-        <th>阶段</th>
-      </tr>
-        #{list items:units, as:'unit'}
-            #{set planQty:it.name()=='Machining'? unit.availableQty : unit.attrs.planQty/}
-          <tr class="text-center" id="tr_${unit.id}">
-            <td>
-              <input type="checkbox" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
-              <input type="hidden" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
-            </td>
-            <td>${unit.id}</td>
-            <td>${unit.deliveryment.id}</td>
-            <td>${unit.selling?.sellingId}</td>
-            <td>${unit.product.sku}</td>
-            <td>${unit.product.abbreviation}</td>
-            <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
-            <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
-            <td>${planQty}</td>
-            <td>${unit.fba?.shipmentId}</td>
-            <td>${unit.whouse?.name()}</td>
-            <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
-            <td>${unit.projectName}</td>
-            <td style="background-color:${unit.stage?.rgb()}">${unit.stage?.label()}</td>
-          </tr>
-        #{/list}
-    </table>
-    <div class="input-append">
-      <input type="button" class="btn btn-danger" id="deleteBtn" value="解除"/>
-    </div>
-    <div class="input-append">
-      <input type="text" name="msg" value="" placeholder="采购计划ID" id="procureId">
-      <input type="button" class="btn btn-warning" rel="tooltip" id="quickAdd" title="输入采购ID，可以快速添加采购计划" value="快速添加">
-    </div>
 
-  </div>
-</div>
 
-#{/form}
+
 
