--- a/core/app/views/Analyzes/operateInfo.html
+++ b/core/app/views/Analyzes/operateInfo.html
@@ -1,10 +1,129 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+#{extends 'main_full_v3.html'/}
+#{set title:'Operate'/}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap3/highcharts.css'/}
+#{/set}
+#{set 'moreScripts'}
+    #{script 'bootstrap3/highcharts.js'/}
+    #{script 'analyzes/operateInfo.es6'/}
+#{/set}
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-success">
+      <div class="box-header form-inline with-border">
+        <div class="row-fluid">
+          <div class="input-group">
+            <div class="input-group-addon"><i class="icon-search"></i></div>
+            <input style="width:200px;" class="form-control" name="p.search" placeHolder="SKU" value="">
+          </div>
+          <button class="btn btn-primary" id="searchBtn">搜索</button>
+        </div>
+      </div>
+      <div class="box-body">
+        <div class="row" id="basic" style="height:400px;">
+          <div class="col-md-6" style="height:300px;">
+            <div id="a_units" data-method="ajaxUnit"></div>
+          </div>
+          <div class="col-md-3" style="height:300px;">
+            <div id="a_turn" data-method="ajaxSellingTurn"></div>
+          </div>
+          <div class="col-md-3" style="height:350px;">
+            <div id="a_ss" data-method="ajaxSellingTurn"></div>
+          </div>
+        </div>
+      </div>
+      <div class="box-footer">
+        <button class="btn btn-default btn-xs" data-market='amazon.de'>德国</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.com'>美国</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.es'>西班牙</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.fr'>法国</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.co.uk'>英国</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.it'>意大利</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.jp'>日本</button>
+        <button class="btn btn-default btn-xs" data-market='amazon.ca'>加拿大</button>
+        <button class="btn btn-default btn-xs" data-market=''>汇总</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<form action="@{Analyzes.analyzes()}" method="get" id="click_param" class="form-inline">
+      <div class="row-fluid">
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-addon">From:</div>
+            <input style="width:100px;" class="form-control" role="date" name="p.from" value="${p.from.date()}">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-addon">To:</div>
+            <input style="width:100px;" class="form-control" role="date" name="p.to" value="${p.to.date()}">
+          </div>
+        </div>
+
+        <a class="form-control btn btn-default" id="all_search" rel="popover" content="按照时间重新加载数据, 主要用于查看长时间 ALL SKU 的数据">
+          Reload
+        </a>
+
+        <select name="p.aid" class="form-control" style="width:100px;">
+          <option value="">Account</option>
+          #{list items:accs, as:'a'}
+          <option value="${a.id}" #{if p.aid==a.id} selected #{/if}>${a.prettyName()}</option>
+          #{/list}
+        </select>
+
+        <select name="p.market" style="width: 120px;" class="form-control">
+          <option value="">Market</option>
+        #{list items:models.market.M.values(), as:'d'}
+          <option value="${d.toString()}">${d.toString()}</option>
+        #{/list}
+        </select>
+
+      #{select 'p.categoryId', items:categoryIds, value: p.categoryId, class: 'form-control selectize',style:"width:100px;"}
+          #{option ''}Category#{/option}
+      #{/select}
+
+      #{select 'p.state', items:['Active', 'Inactive', 'All'], value: p.state, class: 'form-control selectize',
+      style:"width:80px;"}
+      #{/select}
+
+        <select name="p.flag" class="form-control" style="width:80px;">
+          <option value="1">PS day1 库存大于0</option>
+          <option value="2">显示所有</option>
+        </select>
+
+        <div class="input-group">
+          <div class="input-group-addon"><i class="icon-search"></i></div>
+          <input class="form-control" id="a_param" name="p.search" placeholder="搜索 MSKU/SKU/ASIN/^71xx">
+        </div>
+
+        <a class="btn btn-primary" id="a_search">搜索</a>
+        <a class="btn btn-success" id="exceldown">下载Excel(SID)</a>
+
+        <a href="javascript:;" class="btn btn-primary disabled pull-right" style="margin-right:5px;margin-top:5px;">
+          Next Refresh At ${jobs.analyze.SellingSaleAnalyzeJob.cachedDate(p.type).datetime()}
+        </a>
+
+        <input type="hidden" id="postPage" name="p.page" value="1">
+        <input type="hidden" id="postType" name="p.type" value="sid">
+        <input type="hidden" id="postOrderBy" name="p.orderBy" value="day7">
+        <input type="hidden" id="postVal" name="p.val" value="all">
+        <input type="hidden" id="postDesc" name="p.desc" value="${p.desc}">
+      </div>
+    </form>
+
+<input type="hidden" id="postVal"/>
+
+<div id="success-graphs-container" class="success-graphs">
+  <div id="subset_success_rates" style="width:100%; border-bottom: 1px solid #F8F8F8"></div>
+  <div id="total_success_rates" style="width:100%;"></div>
+</div>
+
+
+
+
+
