--- a/core/app/views/header_v3.html
+++ b/core/app/views/header_v3.html
@@ -37,6 +37,9 @@
               #{power.ck "analyzes.index"}
                 <li><a href="@{Analyzes.index()}">销量分析</a></li>
               #{/power.ck}
+              #{power.ck "analyzes.operateInfo"}
+                <li><a href="@{Analyzes.operateInfo()}">运营信息分析</a></li>
+              #{/power.ck}
               #{power.ck "analyzes.newindex"}
                 <li><a href="@{Analyzes.newIndex()}">销量分析(New)</a></li>
               #{/power.ck}
