* jrockend条用页面调整

--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -51,6 +51,7 @@
                         <th>Memo</th>
                         <th>Duration</th>
                         <th>type</th>
+                        <th>备注</th>
                         <th>运行</th>
                     </tr>
 
@@ -59,8 +60,9 @@
                         <td>汇率同步</td>
                         <td>每30分钟执行一次</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="currencySync"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
 
@@ -69,27 +71,31 @@
                         <td>快递运输单同步</td>
                         <td>每 4 个小时执行一次</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="shipmentSync"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
 
                     <tr>
                         <td>inventoryCostsReport</td>
                         <td>inventoryCostsReport</td>
-                        <td>每个月的最后一天和倒数第二天</td>
+                        <td>每个月1号0点</td>
+                        <td></td>
                         <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="inventoryCostsReport"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
                         <td>multiCountryFbaQtySync</td>
                         <td>SellingQty (简单版本数据)</td>
                         <td>0 10 0,6,15,18 * * ?</td>
-                        <td>_GET_AFN_INVENTORY_DATA_BY_COUNTRY_</td>
+                        <td>_GET_AFN_INVENTORY_DATA_BY_COUNTRY_
+                        </td>
+                        <td><span style="color: red">easycc不执行</span></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="multiCountryFbaQtySync"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
@@ -97,8 +103,9 @@
                         <td>SellingQty(完整版本数据)</td>
                         <td>0 0 0,6,15,18 * * ?</td>
                         <td>_GET_FBA_MYI_ALL_INVENTORY_DATA_</td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="amazonFbaQtySync"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
@@ -106,8 +113,9 @@
                         <td>businessOrderJob</td>
                         <td>每30分钟执行一次</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="businessOrderJob"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
@@ -115,9 +123,10 @@
                         <td>reportOrderrxml接口同步订单数据</td>
                         <td>每天的 3点11点19点 执行一次</td>
                         <td>_GET_XML_ALL_ORDERS_DATA_BY_ORDER_DATE_</td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="multiCountryOrderrSync"
                                data-confirm="确认运行?"
-                               class="btn btn-xs btn-danger">运行一次</a></td>
+                               class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
@@ -125,8 +134,9 @@
                         <td>EbayFee 同步</td>
                         <td>每 30 分钟执行一次</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="ebayFeeSync"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a></td>
                     </tr>
 
                     <tr>
@@ -134,8 +144,9 @@
                         <td>自动下载发送 财务所需报表邮件</td>
                         <td>每月1号 9点</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="financeEndAndMonthJob"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
 
@@ -144,8 +155,9 @@
                         <td>自动下载发送 运营所需报表邮件</td>
                         <td>每月2号 10点</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="operateReportJob"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
 
@@ -155,8 +167,9 @@
                         <td>marketRecord报表</td>
                         <td> 0点8点16点 30分</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="marketRecordWatchTrigger"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
 
@@ -165,8 +178,9 @@
                         <td>通过group获取salefee</td>
                         <td> 0点8点16点 30分</td>
                         <td></td>
+                        <td></td>
                         <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="amazonOrderFinanceSyncByGroup"
-                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a>
+                               data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
                 </table>
