--- a/core/app/views/Brands/index.html
+++ b/core/app/views/Brands/index.html
@@ -1,125 +1,131 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:'Brand' /}
-#{set 'moreScripts'}
-#{/set}
-#{if brands.size() == 0}
-<div class="row-fluid">
-  <div>
-    等待添加新品牌
-  </div>
-</div>
-#{/if}
-#{else }
-<div class="row-fluid">
-  <form method="post" action="@{Brands.create()}">
-    <div class="span3 well well-small">
-      <table class="table table-striped table-bordered table-condensed">
-        <tr>
-          <th>FullName</th>
-          <th>Brand</th>
-        </tr>
+
+#{errorMsgs /}
+#{flash_alert /}
+
+<div class="row">
+  <div class="col-md-4">
+    <div class="box box-primary">
+      <form method="post" action="@{Brands.create()}">
+        <div class="box-body">
+          <table class="table table-striped table-bordered table-condensed">
+            <tr>
+              <th>FullName</th>
+              <th>Brand</th>
+            </tr>
           #{list items:brands, as:'b'}
             <tr>
               <td>${b.fullName}</td>
               <td><a href="@{Brands.index()}/${b.name}">${b.name}</a></td>
             </tr>
           #{/list}
-        <tr>
-          <td><input type="text" name="brand.fullName" class="input-small"></td>
-          <td><input type="text" name="brand.name" class="input-small"></td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <button class="btn btn-primary">添加新品牌</button>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </form>
-
-  <div class="span8 well well-small">
-      #{errorMsgs /}
-      #{flash_alert /}
-      #{info_row title:'基本信息'/}
-    <div>
-      <form method="post" action="@{Brands.update()}">
-        <table class="table table-bordered table-condensed">
-          <tr>
-            <td>Brand:</td>
-            <td>${brand.name}</td>
-            <td>FullName:</td>
-            <td>
-              <input type="text" class="input-medium" value="${brand.fullName}" name="brand.fullName">
-            </td>
-          </tr>
-          <tr>
-            <td>Memo</td>
-            <td colspan="3">
-              <textarea rows="5" name="brand.memo" class="span12">${brand.memo}</textarea>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <input type="hidden" value="${brand.name}" name="brand.name">
-              <button data-confirm="确认更新?" class="btn btn-primary">更新</button>
-            </td>
-          </tr>
-        </table>
+            <tr>
+              <td><input type="text" name="brand.fullName" class="input-small"></td>
+              <td><input type="text" name="brand.name" class="input-small"></td>
+            </tr>
+          </table>
+        </div>
+        <div class="box-footer">
+          <button class="btn btn-primary">添加新品牌</button>
+        </div>
       </form>
     </div>
+  </div>
 
-      #{info_row title:'关联的 Category'/}
-    <div class="row-fluid">
-      <div class="span6">
-        <form method="post" action="@{Brands.bindCategory()}">
-          <div style="margin-bottom:10px;">
-            <input type="hidden" name="id" value="${brand.name}">
-            <button class="btn btn-primary">绑定</button>
+  <div class="col-md-8">
+    <div class="col-md-12">
+      <div class="box box-primary">
+        <div class="box-header with-border"><h3 class="box-title">基本信息</h3></div>
+        <form action="@{Brands.update()}" method="post" class="form-horizontal">
+          <div class="box-body">
+            <table class="table table-bordered table-condensed">
+              <tr>
+                <td>Brand:</td>
+                <td>${brand.name}</td>
+                <td>FullName:</td>
+                <td>
+                  <input type="text" class="form-control" value="${brand.fullName}" name="brand.fullName">
+                </td>
+              </tr>
+              <tr>
+                <td>Memo</td>
+                <td colspan="3">
+                  <textarea rows="5" name="brand.memo" class="form-control">${brand.memo}</textarea>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="4">
+                  <input type="hidden" value="${brand.name}" name="brand.name">
+                </td>
+              </tr>
+            </table>
           </div>
-          <table class="table table-bordered table-condensed">
-            <tr>
-              <th></th>
-              <th>CategoryId</th>
-              <th>Name</th>
-            </tr>
-              #{list items:brand.unCategories(), as:'cat'}
-                <tr>
-                  <td>
-                    <label><input type="checkbox" name="cateIds" value="${cat.categoryId}"></label>
-                  </td>
-                  <td>${cat.categoryId}</td>
-                  <td>${cat.name}</td>
-                </tr>
-              #{/list}
-          </table>
+          <div class="box-footer">
+            <button data-confirm="确认更新?" class="btn btn-primary">更新</button>
+          </div>
         </form>
       </div>
+    </div>
 
-      <div class="span6">
+    <div class="col-md-6">
+      <div class="box box-warning">
+        <form method="post" action="@{Brands.bindCategory()}">
+          <div class="box-header"><h3 class="box-title">未关联的 Category</h3></div>
+          <div class="box-body">
+            <table class="table table-bordered table-condensed">
+              <tr>
+                <th></th>
+                <th>CategoryId</th>
+                <th>Name</th>
+              </tr>
+            #{list items:brand.unCategories(), as:'cat'}
+              <tr>
+                <td>
+                  <label><input type="checkbox" name="cateIds" value="${cat.categoryId}"></label>
+                </td>
+                <td>${cat.categoryId}</td>
+                <td>${cat.name}</td>
+              </tr>
+            #{/list}
+            </table>
+          </div>
+          <div class="box-footer">
+            <button class="btn btn-primary">绑定</button>
+            <input type="hidden" name="id" value="${brand.name}">
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="box box-warning">
         <form action="@{Brands.unbindCategory()}" method="post">
-          <div style="margin-bottom:10px;">
+          <div class="box-header"><h3 class="box-title">关联的 Category</h3></div>
+          <div class="box-body">
+            <table class="table table-bordered table-condensed">
+              <tr>
+                <th></th>
+                <th>CategoryId</th>
+                <th>Name</th>
+              </tr>
+            #{list items:brand.categories, as:'cat'}
+              <tr>
+                <td>
+                  <label><input type="checkbox" name="cateIds" value="${cat.categoryId}"></label>
+                </td>
+                <td>${cat.categoryId}</td>
+                <td>${cat.name}</td>
+              </tr>
+            #{/list}
+            </table>
+          </div>
+          <div class="box-footer">
             <input type="hidden" name="id" value="${brand.name}">
             <button class="btn btn-warning">解除绑定</button>
           </div>
-          <table class="table table-bordered table-condensed">
-            <tr>
-              <th></th>
-              <th>CategoryId</th>
-              <th>Name</th>
-            </tr>
-              #{list items:brand.categories, as:'cat'}
-                <tr>
-                  <td>
-                    <label><input type="checkbox" name="cateIds" value="${cat.categoryId}"></label>
-                  </td>
-                  <td>${cat.categoryId}</td>
-                  <td>${cat.name}</td>
-                </tr>
-              #{/list}
-          </table>
         </form>
       </div>
+
     </div>
   </div>
 </div>
-#{/else}
