--- a/core/app/views/Orders/indexEbay.html
+++ b/core/app/views/Orders/indexEbay.html
@@ -77,10 +77,10 @@
           <tr class="order_info" id="orderInfo_${ord.orderId}" data-toggle="collapse" data-target="#orderDetail_${ord.orderId}">
             <td>${ord.market.toString()}</td>
             <td data-toggle="toggle" data-target="#order_index_${ord_index}">
-              <span class="badge badge-info">${ord.items?.size()}</span> <i class="icon-reorder"></i>
+              <span class="badge bg-green">${ord.items?.size()}</span> <i class="icon-reorder"></i>
             </td>
             <td data-toggle="toggle" data-target="#order_fee_${ord_index}">
-              <i class="icon-reorder"></i> <span class="badge badge-info">${ord.fees?.size()}</span> ${ord.totalFbaFee()}
+              <i class="icon-reorder"></i> <span class="badge bg-light-blue">${ord.fees?.size()}</span> ${ord.totalFbaFee()}
             </td>
             <td>${ord.country}</td>
             <td>${ord.city}</td>
@@ -92,7 +92,7 @@
             <td>#{time_tooltip time:ord.createDate/}</td>
             <td>#{time_tooltip time:ord.paymentDate/}</td>
             <td style="color:${'#' + ord.state.color()}">${ord.state}</td>
-            <td><a href="@{Orders.refreshFeeByEbay(ord.orderId)}" class="btn btn-mini btn-warning">重新抓取费用</a></td>
+            <td><a href="@{Orders.refreshFeeByEbay(ord.orderId)}" class="btn btn-xs  btn-warning">重新抓取费用</a></td>
           </tr>
           <tr style="display:none" id="order_index_${ord_index}">
             <td colspan="12">
