--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -110,7 +110,7 @@ ${totalUnReadNum}
                 <i class="icon-download-alt"></i> 导出运输单发货明细excel</a>
               <a href="javascript:void(0)" data-url="@{Excels.shipmentDetailCost()}" target="_blank" id="exportBtn" class="btn btn-success">
                 <i class="icon-download-alt"></i> 物流费用报表</a>
-              <a href="javascript:void(0)" data-url="@{Excels.packingList()}" target="_blank" id="packingBtn" class="btn btn-success">
+              <a href="javascript:void(0)" data-url="@{Excels.packingList()}" target="_blank" id="packingBtn" class="btn btn-primary">
                 <i class="icon-download-alt"></i>装箱单</a>
             </div>
           </div>
