* 物料采购单、采购单详情页 采购单价小数点不限制小数点后位数

--- a/core/app/views/MaterialPurchases/_unit_list.html
+++ b/core/app/views/MaterialPurchases/_unit_list.html
@@ -36,8 +36,8 @@
     <td>${unit.material?.version}</td>
     <td>${unit.planQty}</td>
     <td>${unit.material?.surplusConfirmQty(cooperId)}</td>
-    <td>${unit.planCurrency?.symbol()} ${unit.formatPlanPrice().format('#,###.##')}</td>
-    <td>${unit.planCurrency?.symbol()} ${unit.totalAmount().format('#,###.##')}</td>
+    <td>${unit.planCurrency?.symbol()} ${unit.planPrice}</td>
+    <td>${unit.planCurrency?.symbol()} ${unit.totalAmount()}</td>
     <td>
       <a href="javascript:void(0)" name="unitUpdateBtn" class="btn btn-mini btn-primary" uid="${unit.id}">修改</a>
     </td>
