--- a/core/app/views/Deliveryments/_box_number_model.html
+++ b/core/app/views/Deliveryments/_box_number_model.html
@@ -10,7 +10,7 @@
         </table>
       </div>
       <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
         <a class="btn btn-primary" id="submitDownloadFBAZIP">提交</a>
       </div>
     </div>
